# prolog-rs

./: Cargo.toml  README.md
src/: data.rs  lib.rs  term.rs
src/backends/: mod.rs  swi_prolog_link.rs
